Setup cocoapods example.

--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,6 @@
 ios/FastImage/Libraries/SDWebImage/.git*
 ios/FastImage/Libraries/SDWebImage/Examples
 ios/FastImage/Libraries/SDWebImage/Tests
+ios/build
 example
 server
